<resources>
    <string name="app_name">TitanTrack</string>


    <!-- Login -->
    <string name="login_title">TITAN</string>
    <string name="login_title_accent">TRACK</string>
    <string name="login_subtitle">Accede a tu cuenta</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="link_go_register">¿No tienes cuenta? Regístrate</string>

    <!-- Registro -->
    <string name="register_title">Crear cuenta</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="link_go_login">¿Ya tienes cuenta? Inicia sesión</string>

    <!-- Navegación inferior -->
    <string name="nav_home">Inicio</string>
    <string name="nav_routines">Rutinas</string>
    <string name="nav_progress">Progreso</string>
    <string name="nav_profile">Perfil</string>

    <!-- Contenido provisional de cada sección -->
    <string name="section_home">Panel de inicio</string>
    <string name="section_routines">Tus rutinas</string>
    <string name="section_progress">Tu progreso</string>
    <string name="section_profile">Tu perfil</string>

    <!-- Contenido para mostrar los ejercicios -->
    <string name="exercise_sets_label">Series: %1$s</string>
    <string name="exercise_level_label">Nivel: %1$s</string>

</resources>